manifest/ingress-nginx-system/ingress-nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: ingress-nginx-system
    app.kubernetes.io/name: ingress-nginx-system
  name: ingress-nginx-system
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx-system
    app.kubernetes.io/name: ingress-nginx-system
    app.kubernetes.io/part-of: ingress-nginx-system
  name: nginx-system
spec:
  controller: k8s.io/ingress-nginx-system
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/component: admission-webhook
    app.kubernetes.io/instance: ingress-nginx-system
    app.kubernetes.io/name: ingress-nginx-system
    app.kubernetes.io/part-of: ingress-nginx-system
  name: ingress-nginx-system-admission
  namespace: ingress-nginx-system
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ingress-nginx-system-controller-admission
      namespace: ingress-nginx-system
      path: /networking/v1/ingresses
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validate.nginx.ingress.kubernetes.io
  rules:
  - apiGroups:
    - networking.k8s.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - ingresses
  sideEffects: None
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx-system
    app.kubernetes.io/name: ingress-nginx-system
    app.kubernetes.io/part-of: ingress-nginx-system
  name: ingress-nginx-system-controller-admission
  namespace: ingress-nginx-system
spec:
  type: ClusterIP
  ports:
  - name: https-webhook
    port: 443
    targetPort: webhook
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx-system
    app.kubernetes.io/name: ingress-nginx-system
